# woofsandmeows

./: .gitignore  audio_dataset.py  augment.py  base_model.py  bcos_explain_shell.py  config.py  create_logger.py  custom_logger_formatter.py  data.py  dog_cat_audio_dataset.py  esc_audio_dataset.py  explain.ipynb  explain.py  explanation.py  gradcam.py  handle_output.py  lime_explainer.py  main.py  pipeline.ipynb  pyproject.toml  qual_analysis_utils.py  qualitiative_analysis.ipynb  quant_analysis_utils.py  quantitative_analysis.ipynb  requirements.txt  resnet_18.py  resnet_18_baseline.py  resnet_bcos.py  sentiment_model.py  test_best_model.ipynb  train.py  train_bcos.py  tune.py  utils.py  visualise.py
config/: config.yaml  config_validation_template.py
data/: README.md
data/train/cat/: orange-cat-with-stripes_1.avif
