[project]
name = "woofsandmeows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcos>=0.1.3",
    "captum>=0.9.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.9",
    "pytorch-lightning>=2.6.4",
    "scikit-image>=0.26.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[tool.uv.sources]
bcos = { git = "https://github.com/LukaVanHoeven/B-cos-v2.git" }
