[project]
name = "woofsandmeows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcos>=0.1.3",
    "ffmpeg>=1.4",
    "matplotlib>=3.10.9",
    "pytorch-lightning>=2.6.4",
    "pytz>=2026.2",
    "soundfile>=0.13.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.13.0",
    "torchvision>=0.27.0",
]
